Fix filtered list display wrapping
Needed updating to flex when filtered.

--- a/src/styles/settings.css
+++ b/src/styles/settings.css
@@ -236,7 +236,7 @@ header li:hover {
 }
 
 #permissions-list.filtered li.filter {
-  display: block;
+  display: flex;
 }
 
 #permissions-list li.disabled {
